@@ -24,7 +24,8 @@ import java.util.Arrays;
 import java.util.Iterator;
 import java.util.List;
 import java.util.NavigableMap;
-import java.util.TreeMap;
+import java.util.concurrent.ConcurrentNavigableMap;
+import java.util.concurrent.ConcurrentSkipListMap;
 
 
 import org.apache.avro.Schema.Field;
@@ -88,7 +89,9 @@ public class MemStore<K, T extends PersistentBase> extends DataStoreBase<K, T> {
     }
   }
 
-  private TreeMap<K, T> map = new TreeMap<K, T>();
+  // This map behaves like DB, has to be static and concurrent collection
+  @SuppressWarnings("rawtypes")
+  public static ConcurrentSkipListMap map = new ConcurrentSkipListMap();
 
   @Override
   public String getSchemaName() {
@@ -110,35 +113,36 @@ public class MemStore<K, T extends PersistentBase> extends DataStoreBase<K, T> {
         if(delete(result.getKey()))
           deletedRows++;
       }
-      return 0;
-    }
-    catch(Exception e){
+      return deletedRows;
+    } catch (Exception e) {
       return 0;
     }
   }
-
+  
+  @SuppressWarnings("unchecked")
   @Override
   public Result<K, T> execute(Query<K, T> query) {
     K startKey = query.getStartKey();
     K endKey = query.getEndKey();
     if(startKey == null) {
-      startKey = map.firstKey();
+      startKey = (K) map.firstKey();
     }
     if(endKey == null) {
-      endKey = map.lastKey();
+      endKey = (K) map.lastKey();
     }
 
     //check if query.fields is null
     query.setFields(getFieldsToQuery(query.getFields()));
 
-    NavigableMap<K, T> submap = map.subMap(startKey, true, endKey, true);
+    ConcurrentNavigableMap<K,T> submap = map.subMap(startKey, true, endKey, true);
 
     return new MemResult<K,T>(this, query, submap);
   }
-
+  
+  @SuppressWarnings("unchecked")
   @Override
   public T get(K key, String[] fields) {
-    T obj = map.get(key);
+    T obj = (T) map.get(key);
     if (obj == null) {
       return null;
     }
@@ -169,7 +173,8 @@ public class MemStore<K, T extends PersistentBase> extends DataStoreBase<K, T> {
   public Query<K, T> newQuery() {
     return new MemQuery<K, T>(this);
   }
-
+  
+  @SuppressWarnings("unchecked")
   @Override
   public void put(K key, T obj) {
     map.put(key, obj);
@@ -189,7 +194,6 @@ public class MemStore<K, T extends PersistentBase> extends DataStoreBase<K, T> {
 
   @Override
   public void close() {
-    map.clear();
   }
 
   @Override
@@ -206,5 +210,7 @@ public class MemStore<K, T extends PersistentBase> extends DataStoreBase<K, T> {
   }
 
   @Override
-  public void flush() { }
+  public void flush() {
+    map.clear();
+  }
 }
